feat(calibration): implementar vencimiento de calibraciones (Épica 364) - Añadido estado EXPIRED y motivos de expiración al esquema de BD (Migración V27). - Implementado `CalibrationExpirationService` para invalidar masivamente calibraciones activas tanto a nivel plataforma como curso. - Integrado disparador de vencimiento reactivo al publicar nuevas versiones de Rúbricas (`RubricPublicationService`) y Golden Sets (`CourseGoldenSetService`, `GoldenSetUpdateProposalService`). - Creado `CalibrationExpirationWorker` (Cron Job) para caducar periódicamente calibraciones por límite de tiempo. - Modificada la compuerta de evaluación (`JdbcCalibrationWorkflowStore`) para rechazar evaluaciones pendientes si la calibración activa ya no es válida. - Refactorizado `CalibrationRunRepository` para mapear los nuevos campos de auditoría de expiración. Resolves: #667, #674, #680, #682